--- a/MVC Movie Tutorial/MVCMovie/MVCMovie/bin/MVCMovie.dll.config
+++ b/MVC Movie Tutorial/MVCMovie/MVCMovie/bin/MVCMovie.dll.config
@@ -12,7 +12,11 @@
     <add name="MovieDBContext" 
       connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" 
       providerName="System.Data.SqlClient" 
-    />  
+    />
+    <add name="BookDBContext"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFileName=|DataDirectory|\Books.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient"
+    />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
